calico: Sync roles with calico 3.10

--- a/roles/network_plugin/calico/templates/calico-cr.yml.j2
+++ b/roles/network_plugin/calico/templates/calico-cr.yml.j2
@@ -82,6 +82,7 @@ rules:
 {% endif %}
       - clusterinformations
       - hostendpoints
+      - blockaffinities
     verbs:
       - get
       - list
